Stripe Integration into App

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,5 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=crwn-clothing-cf6aa.appspot.com
 REACT_APP_FIREBASE_MESSENGER_SENDER_ID=850835159934
 REACT_APP_FIREBASE_APP_ID=1:850835159934:web:489147ccaf344ba8ded12f
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-CQ0SE47VTS
+
+REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_test_BSOJk0ZDDeSXbJdzhN9AmmCn
