--- a/.gitignore
+++ b/.gitignore
@@ -18,12 +18,13 @@
 /client/.env.development.local
 /client/.env.test.local
 /client/.env.production.local
-
-.env
+/client/src/.eslintrc.json
 
 /client/npm-debug.log*
 /client/yarn-debug.log*
 /client/yarn-error.log*
+
+.env
 
 npm-debug.log*
 yarn-debug.log*
