--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
     "firebase": "^7.19.0",
     "lodash.memoize": "^4.1.2",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -23,7 +23,7 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "react-scripts": "3.0.0"
+    "react-scripts": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
