Added yarn.lock to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,11 @@
 /client/npm-debug.log*
 /client/yarn-debug.log*
 /client/yarn-error.log*
+/client/yarn-lock*
 
 .env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn-lock.log*
