--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -16,7 +16,7 @@
       "src": "crwn-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
